# temp_hero

./: .gitignore  .travis.yml  Makefile  Makefile.am  README.md  battle.c  bootstrap  configure.ac  hakkentestfight.c  main.c  run.sh
html/: haha.html  index.html
samples/: Makefile.am  StinkinDungeon_Alpha.c  StinkinDungeon_Beta.c  StinkinDungeon_Gameloop.c  asobi.c  configure.ac
src/: Makefile.am  Title.c  area.c  area.h  battle.c  battle.cpp  battle.h  battle.hpp  cli.c  cli.h  define.h  define.hpp  image.c  image.h  main.c  main.cpp  main.h  map.c  map.cpp  map.h  map.hpp  monsters.c  player.c  player.cpp  player.h  player.hpp  renderer.c  renderer.cpp  renderer.h  renderer.hpp  screenplay.c  screenplay.cpp  screenplay.h  screenplay.hpp
tools/: aa_converter.rb
